--- a/index.html
+++ b/index.html
@@ -107621,7 +107621,7 @@ window.Entropy = new (function() {
             var option = $("<option>");
             option.attr("value", i);
             option.text(network.name);
-            if (network.name == "BTC - Bitcoin") {
+            if (network.name == "TAO - Tao") {
                 option.prop("selected", true);
             }
             DOM.phraseNetwork.append(option);
